--- a/src/app/pages/correspondencia/correspondencia.component.html
+++ b/src/app/pages/correspondencia/correspondencia.component.html
@@ -74,7 +74,7 @@
   <!-- Tabla de datos lista de flujograma de estado de hoja de ruta -->
   <div *ngIf="this.mostrarSeguimiento"
     class="row justify-content-center mt-5 mb-4 animate__animated animate__fadeIn  fast">
-    <div class="col-12 col-md-12 col-lg-5">
+    <div class="col-12 col-md-12 col-lg-5" id="detalleSolicitud">
       <h3>Detalle de solicitud</h3>
       <hr>
 
