--- a/src/app/pages/home/tramites/tramites.component.css
+++ b/src/app/pages/home/tramites/tramites.component.css
@@ -7,13 +7,11 @@
   display: grid;
   grid-template-columns: 100%;
   /* Separacion de elementos */
-  /* column-gap: 2rem;
-    row-gap: 2rem; */
   gap: 2rem;
   max-width: 120rem;
 }
 
-@media(min-width: 440px) {
+@media(min-width: 576px) {
   .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -26,22 +24,25 @@
 
 @media(min-width: 768px) {
   .grid {
+
     grid-template-columns: repeat(3, 1fr);
   }
 
 }
-
-
 
 .producto {
   background-color: var(--grisClaro);
   padding: 0.8rem;
   border-radius: 15px;
   transition: all 0.25s;
+  box-shadow: 2px 4px 10px -6px rgba(0, 0, 0, .75);
+  background: rgb(62, 91, 170);
+  background: linear-gradient(90deg, rgba(62, 91, 170, 1) 0%, rgba(74, 105, 189, 1) 35%, rgba(89, 122, 214, 1) 100%);
 }
 
 .producto__enlace {
   text-decoration: none;
+
 }
 
 .producto__imagen {
@@ -51,7 +52,7 @@
 
 .producto__nombre {
   font-size: 1.2rem;
-  color: var(--primarioOscuro);
+  color: var(--blanco);
   text-transform: uppercase;
   font-weight: bold;
 }
