--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -5,18 +5,21 @@
     <div class="detalles-footer col-12 col-md-4 mt-3 mt-md-0" id="">
       <h2 class="text-white text-start">SOBRE <span class="text-warning">NOSOTROS</span></h2>
       <h3 class="text-start titulo-objetivo">MISIÓN</h3>
-      <P class="text-white">El Gobierno Autónomo Departamental de Cochabamba es una institución de servicio
+      <P class="text-white parrafo-gobernador">El Gobierno Autónomo Departamental de Cochabamba es una institución de
+        servicio
         público que planifica, promueve
         e implementa el desarrollo integral departamental, articulado al desarrollo nacional, en coordinación con
         actores
         sociales e institucionales, para lograr el Vivir Bien de todas y todos los Cochabambinos.</P>
       <h3 class="text-start titulo-objetivo">VISIÓN</h3>
-      <P class="text-white">El Gobierno Autónomo Departamental de Cochabamba, es líder en la gestión pública
+      <P class="text-white parrafo-gobernador">El Gobierno Autónomo Departamental de Cochabamba, es líder en la gestión
+        pública
         departamental, con una
         estructura organizativa adecuada, personal cualificado y compromiso social; con transparencia e igualdad de
         oportunidades orientada a la vida digna, en armonía con la Madre Tierra.</P>
       <h3 class="text-start titulo-objetivo">OBJETIVOS</h3>
-      <p class="text-white">Formular políticas y estrategias orientadas a asegurar una gestión pública
+      <p class="text-white parrafo-gobernador">Formular políticas y estrategias orientadas a asegurar una gestión
+        pública
         Institucional eficiente y
         transparente, promoviendo el desarrollo del Departamento a través de la ejecución de planes, programas y
         proyectos. Ejercer las atribuciones y funciones que asigna la Constitución política del estado, la Ley Marco
