--- a/src/app/pages/home/principalhome/principalhome.component.html
+++ b/src/app/pages/home/principalhome/principalhome.component.html
@@ -12,7 +12,7 @@
           GOBIERNO ELECTRÓNICO
         </div>
         <div class="card-body">
-          <p>
+          <p class="parrafo-gobernador">
             El Gobierno Autónomo Departamental de Cochabamba
             requiere construir una sólida estructura para el
             desarrollo de Gobierno Electrónico hacia un futuro
@@ -28,10 +28,10 @@
             innovación, investigación y desarrollo de tecnologías
             relacionadas con Gobierno Electrónico.
           </p>
-          <p> El despliegue de herramientas informáticas debe conformar un todo coherente e
+          <p class="parrafo-gobernador"> El despliegue de herramientas informáticas debe conformar un todo coherente e
             interconectado, capaz de hacer más eficientes los servicios y acciones estatales, y que
             resulte en interfaces de interacción simple e intuitiva para la ciudadanía.</p>
-          <p>
+          <p class="parrafo-gobernador">
             Este giro necesario en la relación del Estado con la tecnologías de la información y
             comunicación marcará un cambio trascendental en la manera en que ha operado la
             administración pública hasta hace algunos años y cómo lo hará hacia adelante.
@@ -48,10 +48,10 @@
         </div>
         <div class="card-body">
 
-          <p> El despliegue de herramientas informáticas debe conformar un todo coherente e
+          <p class="parrafo-gobernador"> El despliegue de herramientas informáticas debe conformar un todo coherente e
             interconectado, capaz de hacer más eficientes los servicios y acciones estatales, y que
             resulte en interfaces de interacción simple e intuitiva para la ciudadanía.</p>
-          <p>
+          <p class="parrafo-gobernador">
             Este giro necesario en la relación del Estado con la tecnologías de la información y
             comunicación marcará un cambio trascendental en la manera en que ha operado la
             administración pública hasta hace algunos años y cómo lo hará hacia adelante.
