--- a/src/app/pages/home/tramites/tramites.component.html
+++ b/src/app/pages/home/tramites/tramites.component.html
@@ -1,4 +1,4 @@
-<main class="contenedor ">
+<main class="contenedor">
   <div class="grid p-3 p-md-0 mt-3" id="">
 
     <!-- Bloque -->
@@ -7,7 +7,40 @@
         <div class="producto__informacion" id="">
           <p class="producto__nombre">Seguimiento a Tramites</p>
         </div>
-        <img class="img-fluid producto__imagen" src="../../../assets/img/caminoHR.jpg" alt="Camino hoja de ruta">
+        <img class="img-fluid producto__imagen img-thumbnail" src="../../../assets/img/hojaruta.jpg"
+          alt="Camino hoja de ruta">
+        <div class="d-grid gap-2 mt-2">
+          <button class="btn btn-warning btn-block w-100 text-uppercase">Consultar <i
+              class="bi bi-chevron-right"></i></button>
+        </div>
+      </a>
+    </div>
+    <!--Fin Bloque-->
+
+    <!-- Bloque -->
+    <div class="producto" id="">
+      <a class="producto__enlace" href="http://monitoreo-conflicto.gobernaciondecochabamba.bo" target="_blank">
+        <div class="producto__informacion" id="">
+          <p class="producto__nombre">Cord. de movimientos sociales</p>
+        </div>
+        <img class="img-fluid producto__imagen img-thumbnail" src="../../../assets/img/conflictos.jpg"
+          alt="Camino hoja de ruta">
+        <div class="d-grid gap-2 mt-2">
+          <button class="btn btn-warning btn-block w-100 text-uppercase">Consultar <i
+              class="bi bi-chevron-right"></i></button>
+        </div>
+      </a>
+    </div>
+    <!--Fin Bloque-->
+
+    <!-- Bloque -->
+    <div class="producto" id="">
+      <a class="producto__enlace" href="http://plantillas.gobernaciondecochabamba.bo/" target="_blank">
+        <div class="producto__informacion" id="">
+          <p class="producto__nombre">Sistema de plantillas</p>
+        </div>
+        <img class="img-fluid producto__imagen img-thumbnail" src="../../../assets/img/plantilla.jpg"
+          alt="Camino hoja de ruta">
         <div class="d-grid gap-2 mt-2">
           <button class="btn btn-warning btn-block w-100 text-uppercase">Consultar <i
               class="bi bi-chevron-right"></i></button>
